added row adding

--- a/partials/canvas.tpl.html
+++ b/partials/canvas.tpl.html
@@ -15,5 +15,7 @@
             <div class="gd-column-1"></div>
         </div>
     </div>
-    <div id="gd-canvas--rows"></div>
+    <div id="gd-canvas--rows">
+        <row ng-repeat="row in project.rows"></row>
+    </div>
 </div>
