--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,17 @@ body {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+.gd-icon-btn {
+    color: #555;
+    font-size:1.3em;
+    text-decoration:none;
+}
+.gd-icon-btn:active {
+    color: #666;
+}
+.gd-icon-btn:hover {
+    color: #666;
+}
 .gd-container {
     position:relative;
     width:100%;
@@ -43,7 +54,6 @@ body {
     margin: 0.5rem;
     font-size: 0.9em;
 }
-
 .gd-editor--toolbar {
     flex: 0 0 40px;
     display:flex;
@@ -56,11 +66,9 @@ body {
     z-index:1;
     padding-right:2.5rem;
 }
-
 .gd-editor--toolbar > * {
     margin-left:0.5rem;
 }
-
 .gd-editor--canvas-wrapper {
     position: relative;
     flex: 1 0 auto;
@@ -75,7 +83,7 @@ body {
 }
 .gd-editor--canvas-background .gd-row {
     width:100%;
-    height:100%;        
+    height:100%;
     -webkit-box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.75);
     -moz-box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.75);
     box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.75);
@@ -91,6 +99,22 @@ body {
     min-height:150px;
     width:100%;
     padding:0 2.5rem;
+}
+.gd-canvas--row--tools {
+    position:absolute;
+    overflow:hidden;
+    height:100%;
+    width:0;
+    right:0.3rem;
+    background-color:#E2E2E2;
+    text-align:center;
+    padding-top:0.5rem;
+}
+.gd-canvas--row--tools a {
+    display:block;
+}
+.gd-canvas--row:hover .gd-canvas--row--tools {
+    width:2.2rem;
 }
 .gd-canvas--row--content {
     position:static;
@@ -109,4 +133,20 @@ body {
 }
 .gd-column--box:not(:last-child) {
     border-right: #fff solid 1px;
+}
+
+.gd-column--resize-buttons {
+    position:absolute;
+    overflow:hidden;   
+    top:0;
+    left:0;
+    width:0;
+}
+
+.gd-column--box:hover .gd-column--resize-buttons {
+    width:1.5rem;
+}
+
+.gd-column--resize-buttons a {
+    display:block;
 }
