--- a/styles/style.css
+++ b/styles/style.css
@@ -71,10 +71,13 @@ body {
 }
 .gd-editor--canvas-wrapper {
     position: relative;
-    flex: 1 0 auto;
+    flex: 1;
     background:url(../images/bg-pattern.png) repeat;
-    overflow:scroll;
-    height:0;
+}
+.gd-canvas--rows {
+    position:relative;
+    width:100%;
+    min-height:100%;
 }
 .gd-editor--canvas-background {
     position:absolute;
@@ -147,4 +150,10 @@ body {
 }
 .gd-column--resize-buttons a {
     display:block;
+}
+.gd-editor--canvas-scrollbox {
+    position:absolute;
+    width:100%;
+    height:100%;
+    overflow:auto;
 }
