implemented handling offsets

--- a/partials/column.tpl.html
+++ b/partials/column.tpl.html
@@ -6,5 +6,11 @@
         <a href="javascript:void(0)" class="gd-icon-btn btn-collapse-column" ng-click="collapseColumn()" title="Collapse column">
             <span class="icon-arrow-left2"></span>
         </a>
+        <a href="javascript:void(0)" class="gd-icon-btn btn-add-offset" ng-click="addOffset()" title="Extend column">
+            <span>+</span>
+        </a>
+        <a href="javascript:void(0)" class="gd-icon-btn btn-remove-offset" ng-click="removeOffset()" title="Collapse column">
+            <span>-</span>
+        </a>
     </div>
 </div>
