added offset icons

--- a/partials/column.tpl.html
+++ b/partials/column.tpl.html
@@ -7,10 +7,10 @@
             <span class="icon-arrow-left2"></span>
         </a>
         <a href="javascript:void(0)" class="gd-icon-btn btn-add-offset" ng-click="addOffset()" title="Extend column">
-            <span>+</span>
+            <span class="icon-last"></span>
         </a>
         <a href="javascript:void(0)" class="gd-icon-btn btn-remove-offset" ng-click="removeOffset()" title="Collapse column">
-            <span>-</span>
+            <span class="icon-first"></span>
         </a>
     </div>
 </div>
