--- a/partials/toolbar.tpl.html
+++ b/partials/toolbar.tpl.html
@@ -1,20 +1,8 @@
 <div class="gd-editor--toolbar">
     <div class="topcoat-button-bar">
-        <div class="topcoat-button-bar__item">
-            <input type="radio" name="grid-size" id="grid-size-s" value="s" checked>
-            <label for="grid-size-s" class="topcoat-button-bar__button">Small</label>
-        </div>
-        <div class="topcoat-button-bar__item">
-            <input type="radio" name="grid-size" id="grid-size-m" value="m">
-            <label for="grid-size-m" class="topcoat-button-bar__button">Medium</label>
-        </div>
-        <div class="topcoat-button-bar__item">
-            <input type="radio" name="grid-size" id="grid-size-l" value="l">
-            <label for="grid-size-l" class="topcoat-button-bar__button">Large</label>
-        </div>
-        <div class="topcoat-button-bar__item">
-            <input type="radio" name="grid-size" id="grid-size-xl" value="xl">
-            <label for="grid-size-xl" class="topcoat-button-bar__button">X-Large</label>
+        <div class="topcoat-button-bar__item" ng-repeat="breakpoint in project.preferences.breakpoints">
+            <input type="radio" name="grid-size" ng-model="project.preferences.currentBreakpoint" id="grid-size-{{breakpoint.id}}" value="{{breakpoint.id}}">
+            <label for="grid-size-{{breakpoint.id}}" class="topcoat-button-bar__button">{{breakpoint.label}}</label>
         </div>
     </div>
     <button class="topcoat-button--cta" ng-click="addRow_clickHandler()">Add row</button>
