--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
     color: #555;
     font-size:1.3em;
     text-decoration:none;
-/*    line-height:0em;*/
+    /*    line-height:0em;*/
 }
 .gd-icon-btn:active {
     color: #666;
@@ -157,4 +157,36 @@ body {
     width:100%;
     height:100%;
     overflow:auto;
+}
+.gd-editor--src-panel {
+    position:relative;
+    flex: 0 0 200px;
+    padding:0.2rem;
+    overflow:auto;
+    color:#629fa4;
+}
+pre.prettyprint, code.prettyprint {
+    background-color: inherit!important;
+    -moz-border-radius: 0 !important;
+    -webkit-border-radius: 0 !important;
+    -o-border-radius: 0 !important;
+    -ms-border-radius: 0 !important;
+    -khtml-border-radius: 0 !important;
+    border-radius: 0 !important;
+}
+.gd-editor--src-panel--copy {
+    position:absolute;
+    display:none;
+    top: 0.2rem;
+    right: 0.2rem;
+    padding:0.5rem;
+    text-decoration:none;
+    color:#efefef;
+}
+.gd-editor--src-panel--copy.zeroclipboard-is-hover, .gd-editor--src-panel--copy.zeroclipboard-is-active {
+    display:block;
+    color: #FFFFFF;
+}
+.gd-editor--src-panel:hover .gd-editor--src-panel--copy {
+    display:block;
 }
